@@ -16,7 +16,7 @@
  * along with this program; if not, write to the Free Software
  * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
  *
- * $Id: backgammon.h,v 1.318 2006/11/07 19:44:54 Superfly_Jon Exp $
+ * $Id: backgammon.h,v 1.319 2006/11/09 20:47:16 Superfly_Jon Exp $
  */
 
 #ifndef _BACKGAMMON_H_
@@ -776,6 +776,7 @@ extern void CommandAccept( char * ),
     CommandHint( char * ),
     CommandHistory( char * ),
     CommandImportBKG( char * ),
+    CommandImportGAM( char * ),
     CommandImportJF( char * ),
     CommandImportMat( char * ),
     CommandImportOldmoves( char * ),
